# keras-explainability

./: .gitignore  pyproject.toml
notebooks/: jupytext.toml
notebooks/html_files/: Train and explain 3D mnist model.html  Train and explain dummy geometric data.html
notebooks/py_files/: Explain 2D VGG predictions.py  Explain brain age predictions.py  Train and explain 3D mnist model.py  Train and explain dummy geometric data.py  Train and explain synthetic brain regression model.py
