[project]
name = "brainage-explainability"
version = "0.1.0"
description = "brainage-explainability from esten"
authors = [
    {name = "and1",email = "re.andi@web.de"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.11"
#requires-python = ">=3.10"
dependencies = ["matplotlib (>=3.10.0,<4.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "jupytext (>=1.16.6,<2.0.0)", "pyyaml (>=6.0.2,<7.0.0)", "xarray (>=2025.1.1,<2026.0.0)", "pandas (>=2.2.3,<3.0.0)", "seaborn (>=0.13.2,<0.14.0)", "py-cpuinfo (>=9.0.0,<10.0.0)", "reportlab (>=4.3.0,<5.0.0)", "fpdf (>=1.7.2,<2.0.0)", "gprof2dot (>=2024.6.6,<2025.0.0)", "graphviz (>=0.20.3,<0.21.0)", "snakeviz (>=2.2.2,<3.0.0)", "tensorboard (>=2.15,<3.0)", "tensorboard-plugin-profile (>=2.19.0,<3.0.0)", "tensorflow-datasets (>=4.9.7,<5.0.0)", "pytest (==8.1.1)", "plotly (>=6.0.0,<7.0.0)"]


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
pylint = "^3.3.3"
#tensorflow = { version = "2.15.1", extras = ["and-cuda"] }
tensorflow = "2.17"
numpy = ">=1.21.6,<2.0.0"
scipy = ">=1.7.3,<2.0.0"
requests = "^2.32.3"
ipykernel = "^6.29.5"
notebook = "^7.3.2"
#matplotlib = "^3.4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"